test/errors/fuzzy_match_type.lq
# Test: Fuzzy matching in type errors
# This file intentionally has a typo to test "did you mean?" suggestions
# Expected error: "Variable not in scope: add-natt"
# Expected suggestion: "Did you mean: add-nat?"

import prelude as P

module LFuzzyMatchType contains

  # Deliberately misspell add-nat as add-natt
  define transparent test-typo as value
    function x of-type Nat produce
      function y of-type Nat produce
        P.add-natt x y

  define transparent main as computation
    return test-typo 2 3

end
